--- a/popup.css
+++ b/popup.css
@@ -1,35 +1,115 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap&effect=outline|fire");
+
+@keyframes colorChange {
+  0% {
+    color: #14699d;
+  }
+  40% {
+    color: rgb(177, 2, 2);
+  }
+  100% {
+    color: #14699d;
+  }
+}
+
+@keyframes colorFlash {
+  0% {
+    background: white;
+    color: black;
+    transform: translateY(30%);
+    transform: translateX(0);
+  }
+  10% {
+    background: #14699d;
+    color: white;
+    transform: translateY(10%);
+    transform: translateX(2%);
+  }
+  100% {
+    background: white;
+    color: black;
+    transform: translateY(0);
+    transform: translateX(0);
+  }
+}
+
+/* Stagger animation delay */
+button:nth-child(3) {
+  animation-delay: 0.2s; /* Delay for first button */
+}
+button:nth-child(2) {
+  animation-delay: 0.3s; /* Delay for second button */
+}
+
 html {
   background: black;
 }
 
 body {
-  background: white;
+  background: #83ad37;
   width: 200px;
-  height: 220px;
+  height: 235px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  border: 5px blue solid;
+  border: 5px #14699d solid;
   border-radius: 10%;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 2px 2px 6px black inset;
+  transition: all 0.5s ease-in-out;
 }
 
 button {
-  padding: 10px 20px;
-  margin: 5px;
+  padding: 10px;
+  margin-bottom: 7px;
   min-width: 80%;
-  border: 2px blue solid;
-  transition: transform 0.1s ease-in-out;
+  border: 2px #14699d solid;
+  transition: all 0.1s ease-in-out;
   background-color: white;
   color: black;
+  border-radius: 5px;
+  font-weight: 500;
+  letter-spacing: 0.6px;
+  animation: colorFlash 0.7s ease-in-out;
+  animation-delay: 0.1s;
 }
 
 button:hover {
   cursor: pointer;
-  transform: scale(1.05);
+  transform: scale(1.04);
+  background: #14699d !important;
+  color: white;
+}
+
+button:active {
+  transform: scale(1);
 }
 
 h2 {
-  font-style: italic;
   user-select: none;
+  text-align: center;
+  color: #14699d;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
+  letter-spacing: 3px;
+  font-size: 1.7em;
+  /* animation: colorChange 1s infinite alternate; */
+  animation: colorChange 1.5s ease-in-out;
+  animation-delay: 0.4s;
 }
+
+/* .circle-logo {
+  background: white;
+  border-radius: 100%;
+  border: 2px solid black;
+  position: absolute;
+  scale: 30%;
+  top: 0px;
+  right: 5px;
+} */
